--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 
 .nm{
 
-   text-align: center;
+   text-align: left;
     font-family:myFirstFont;
-    letter-spacing: 5px;
+    letter-spacing: 10px;
+    color:#3296c8;
     font-weight: bold;
     text-shadow: 2px 2px 2px cornsilk;
     font-size:2.5em;
